// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroRoles Component should match the snapshot multiple heroes 1`] = `
<div
  className="HeroRolesList card flex flex-column grow"
>
  <div
    className="header flex justify-between"
  >
    <h3>
      tank
    </h3>
    <img
      alt="tank icon"
      className="role-icon"
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
  <div
    className="body flex flex-column"
  >
    <div
      className="HeroCard flex align-center"
    >
      <div
        className="invitePlayerButton"
      >
        <div
          className=""
        >
          <img
            alt="soldier76 icon"
            className="HeroImage"
            onClick={undefined}
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </div>
        <div
          className="overlay"
        >
          <div
            className="plus-container flex align-center justify-center"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus"
            />
          </div>
        </div>
      </div>
      <div
        className="content flex flex-column"
      >
        <div
          className="display-name"
        >
          You
        </div>
        <div
          className="sub-title"
        >
          <span>
            2400
             SR
          </span>
          <span>
             | 
          </span>
          <span>
            61.1
            % WR
          </span>
        </div>
      </div>
      <div
        className="button-primary"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          stats
        </div>
      </div>
    </div>
    <div
      className="HeroCard flex align-center"
    >
      <div
        className="invitePlayerButton"
      >
        <div
          className=""
        >
          <img
            alt="hanzo icon"
            className="HeroImage"
            onClick={undefined}
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </div>
        <div
          className="overlay"
        >
          <div
            className="plus-container flex align-center justify-center"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus"
            />
          </div>
        </div>
      </div>
      <div
        className="content flex flex-column"
      >
        <div
          className="display-name"
        >
          You
        </div>
        <div
          className="sub-title"
        >
          <span>
            2400
             SR
          </span>
          <span>
             | 
          </span>
          <span>
            61.1
            % WR
          </span>
        </div>
      </div>
      <div
        className="button-primary"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          stats
        </div>
      </div>
    </div>
    <div
      className="HeroCard flex align-center"
    >
      <div
        className="invitePlayerButton"
      >
        <div
          className=""
        >
          <img
            alt="dva icon"
            className="HeroImage"
            onClick={undefined}
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </div>
        <div
          className="overlay"
        >
          <div
            className="plus-container flex align-center justify-center"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus"
            />
          </div>
        </div>
      </div>
      <div
        className="content flex flex-column"
      >
        <div
          className="display-name"
        >
          You
        </div>
        <div
          className="sub-title"
        >
          <span>
            2400
             SR
          </span>
          <span>
             | 
          </span>
          <span>
            61.1
            % WR
          </span>
        </div>
      </div>
      <div
        className="button-primary"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          stats
        </div>
      </div>
    </div>
    <div
      className="HeroCard flex align-center"
    >
      <div
        className="invitePlayerButton"
      >
        <div
          className=""
        >
          <img
            alt="zenyatta icon"
            className="HeroImage"
            onClick={undefined}
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </div>
        <div
          className="overlay"
        >
          <div
            className="plus-container flex align-center justify-center"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus"
            />
          </div>
        </div>
      </div>
      <div
        className="content flex flex-column"
      >
        <div
          className="display-name"
        >
          You
        </div>
        <div
          className="sub-title"
        >
          <span>
            2400
             SR
          </span>
          <span>
             | 
          </span>
          <span>
            61.1
            % WR
          </span>
        </div>
      </div>
      <div
        className="button-primary"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          stats
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroRoles Component should match the snapshot no heroes 1`] = `
<div
  className="HeroRolesList card flex flex-column grow"
>
  <div
    className="header flex justify-between"
  >
    <h3>
      tank
    </h3>
    <img
      alt="tank icon"
      className="role-icon"
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
  <div
    className="body flex flex-column"
  >
    <div
      className="sub-title empty-list-message flex justify-center"
    >
      <div>
        No players online
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroRoles Component should match the snapshot single hero 1`] = `
<div
  className="HeroRolesList card flex flex-column grow"
>
  <div
    className="header flex justify-between"
  >
    <h3>
      tank
    </h3>
    <img
      alt="tank icon"
      className="role-icon"
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
  <div
    className="body flex flex-column"
  >
    <div
      className="HeroCard flex align-center"
    >
      <div
        className="invitePlayerButton"
      >
        <div
          className=""
        >
          <img
            alt="soldier76 icon"
            className="HeroImage"
            onClick={undefined}
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </div>
        <div
          className="overlay"
        >
          <div
            className="plus-container flex align-center justify-center"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus"
            />
          </div>
        </div>
      </div>
      <div
        className="content flex flex-column"
      >
        <div
          className="display-name"
        >
          You
        </div>
        <div
          className="sub-title"
        >
          <span>
            2400
             SR
          </span>
          <span>
             | 
          </span>
          <span>
            61.1
            % WR
          </span>
        </div>
      </div>
      <div
        className="button-primary"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          stats
        </div>
      </div>
    </div>
  </div>
</div>
`;
